welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:2: error: not found: type int
  var max:int = nums(0)
          ^